# vexy-overnight

./: .gitignore  AGENTS.md  CHANGELOG.md  DEPENDENCIES.md  GEMINI.md  IDEA.md  PLAN-102.md  PLAN.md  README.md  TODO-102.md  TODO.md  WORK.md  build.sh  llms.txt  pyproject.toml
.github/workflows/: push.yml  release.yml
issues/: 101.md  105.md  106.md
src/vexy_overnight/: __init__.py  cli.py  config.py  hook_runtime.py  hooks.py  launchers.py  py.typed  rules.py  session_state.py  updater.py  user_settings.py  vexy_overnight.py
src/vexy_overnight/hooks_tpl/: __init__.py  vocl_go.py  vocl_new.py  voco_go.py  voco_new.py  voge_go.py
src/vexy_overnight/tools/: __init__.py  version_bump.py
tests/: test_cli.py  test_config.py  test_hooks.py  test_package.py  test_session_state.py  test_user_settings.py  test_version_bump.py  test_vexy_overnight.py
